<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground"
    android:orientation="vertical"
    android:padding="12dp">

    <EditText
        android:id="@+id/edit_word"
        style="@style/edit_text_style"
        android:layout_marginTop="4dp"
        android:hint="@string/hint_password"
        android:inputType="textAutoComplete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_title"
        style="@style/edit_text_style"
        android:hint="@string/hint_title"
        android:inputType="textAutoComplete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_word" />

    <Button
        android:id="@+id/button_save"
        style="@style/button_style"
        android:text="@string/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_title" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:layout_marginBottom="16dp"
        android:max="8"
        android:progress="4"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxLetters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_generate"
        style="@style/button_style"
        android:text="@string/button_generate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxLetters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox_letters"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBoxNumbers"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxNumbers"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:checked="true"
        android:visibility="invisible"/>

    <CheckBox
        android:id="@+id/checkBoxNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/checkBox_numbers"
        app:layout_constraintBottom_toTopOf="@+id/button_generate"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxMarks"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBoxLetters"
        android:checked="true"
        android:visibility="invisible"/>

    <CheckBox
        android:id="@+id/checkBoxMarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox_marks"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBoxNumbers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBoxNumbers"
        android:checked="true"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/symbolCountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>